--- a/python/Python Intro 3.ipynb
+++ b/python/Python Intro 3.ipynb
@@ -3092,20 +3092,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyodbc \n",
-    "cnxn = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n",
-    "                      \"Server=WIN10\\TCDS;\"\n",
+    "cnxn = pyodbc.connect(\"Driver={ODBC Driver 17 for SQL Server};\"\n",
+    "                      \"Server=192.168.1.1;\"\n",
     "                      \"Database=COLLEGE;\"\n",
-    "                      \"Trusted_Connection=yes;\")\n"
+    "                      \"uid=dsuser07;\"\n",
+    "                      \"pwd=DSuser07!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3320,6 +3321,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CourseId</th>\n",
+       "      <th>CourseName</th>\n",
+       "      <th>DepartmentID</th>\n",
+       "      <th>TeacherId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>English Begginers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Advanced English</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Proffesional English</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mathematics 101</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Matematics Advanced</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CourseId            CourseName  DepartmentID  TeacherId\n",
+       "0         1     English Begginers             1         15\n",
+       "1         2      Advanced English             1         15\n",
+       "2         3  Proffesional English             1         15\n",
+       "3         4       Mathematics 101             2          2\n",
+       "4         5   Matematics Advanced             2         13"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import pyodbc \n",
+    "cnxn = pyodbc.connect(\"Driver={ODBC Driver 17 for SQL Server};\"\n",
+    "                      \"Server=192.168.1.1;\"\n",
+    "                      \"Database=COLLEGE;\"\n",
+    "                      \"uid=dsuser07;\"\n",
+    "                      \"pwd=DSuser07!\")\n",
+    "df = pd.read_sql(\"SELECT * FROM Courses\",cnxn)\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3335,7 +3434,8 @@
    "source": [
     "import sqlite3\n",
     "conn = sqlite3.connect(\"tcds_example.db\")\n",
-    "c = conn.cursor()\n"
+    "c = conn.cursor()\n",
+    "192.168.1.119"
    ]
   },
   {
@@ -3487,7 +3587,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
