--- a/ML/Untitled3.ipynb
+++ b/ML/Untitled3.ipynb
@@ -58,21 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in file(file, \"rt\"):\n",
+      "\"cannot open file '../data/Daily_Demand_Forcasting_Orders.csv': No such file or directory\"\n"
+     ]
+    },
+    {
      "ename": "ERROR",
-     "evalue": "Error in read.table(file = file, header = header, sep = sep, quote = quote, : unused argument (SEP = \";\")\n",
+     "evalue": "Error in file(file, \"rt\"): cannot open the connection\n",
      "output_type": "error",
      "traceback": [
-      "Error in read.table(file = file, header = header, sep = sep, quote = quote, : unused argument (SEP = \";\")\nTraceback:\n",
-      "1. read.csv(\"../data/Daily_Demand_Forcasting_Orders.csv\", SEP = \";\")"
+      "Error in file(file, \"rt\"): cannot open the connection\nTraceback:\n",
+      "1. read.csv(\"../data/Daily_Demand_Forcasting_Orders.csv\", sep = \";\")",
+      "2. read.table(file = file, header = header, sep = sep, quote = quote, \n .     dec = dec, fill = fill, comment.char = comment.char, ...)",
+      "3. file(file, \"rt\")"
      ]
     }
    ],
    "source": [
-    "df = read.csv(\"../data/Daily_Demand_Forcasting_0rders.csv\", SEP = \";\")\n",
+    "df = read.csv(\"../data/Daily_Demand_Forcasting_Orders.csv\", sep = \";\")\n",
     "head(df)\n",
     "dim(df)"
    ]
