--- a/ML/operation Kaggle.ipynb
+++ b/ML/operation Kaggle.ipynb
@@ -2535,42 +2535,28 @@
     }
    ],
    "source": [
-    "mod3 = XGBClassifier()\n",
-    "mod3.fit(X_train,y_train)"
+    "mode2 = XGBClassifier(train_X,train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Target on train data [6043 5312 4401 4744 4195 3974 5130 1927 4866 3974 5312 4195 3926 4866\n",
-      " 4539 5511 4401 3071 3974 4576 3926 5312 3126 5312 5312 5312 3310 3974\n",
-      " 4401 4539 5312 3974 3239 4401 4866 4866 4401 4195 4187 4401 3126 5312\n",
-      " 2402 4401 3974 4401 4576 3126 1600 4576 5312 4195 4401 1944 4866 4539\n",
-      " 4539 1693 3974 4401 3974 5312 3974 4401 3606 1098 4195 4576 5312 5312\n",
-      " 5336 1416 2402 5312 3926 4195 1416 2402 3126 3126 4195 4590 4401 5312\n",
-      " 4401 3974 3126 4576 3126 4195 2792 4539 3974 4866 4401 3974 1416 4187\n",
-      " 2402 5312 5312 4401 4401 1683 2395 3974 4401 1693 4187 2402 3974 4187\n",
-      " 4195 3126 3974 4195 3126 4401 4195 5312 4195 4401 1204 4333 1693 4401\n",
-      " 2402 4401 4576 4401 4195 3126 4576 3926 1693 5312 3974 4864 4195 4195\n",
-      " 5130 1416 5312 1693 1693 2402 3974  822 4187 4401 3974 3974 4401 4539\n",
-      "  981 4401 1693 4195 1416 3974 5312 4541 4539 5191 4195 3974 3974 5312\n",
-      " 4881 5312 4401 4401 3974 4648 4401 2056 4576 4401 3974 1693 4401 5312\n",
-      " 2402 3974 4401 5312 4195 4966 4401 5119 5312 5312 4401 1501 4195 5312\n",
-      " 1969 3974 4401 5312 3974 2402 1450 5312 2431 5312 4891 3974 4187 1795\n",
-      " 4401 4539 3126 3974 1693 1162 5130 4991 4401]\n"
+     "ename": "NameError",
+     "evalue": "name 'mod' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-156-dc6ef85556a4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0myhat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'mod' is not defined"
      ]
     }
    ],
    "source": [
-    "predict_train = mod3.predict(X_train)\n",
-    "print('\\nTarget on train data',predict_train) "
+    "yhat = mod.predict(X_test)"
    ]
   },
   {
