--- a/python/Python Intro 1-Copy1.ipynb
+++ b/python/Python Intro 1-Copy1.ipynb
@@ -1216,6 +1216,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is string\n",
+      "b is string\n",
+      "1 is integer\n",
+      "2 is integer\n",
+      "3 is integer\n",
+      "4 is integer\n",
+      "True is boolean\n",
+      "False is boolean\n",
+      "28.444444444444443 is of <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[\"a\",\"b\",1,2,3,4,True,False,2**7*(2/9)]\n",
+    "for o in a:\n",
+    "    if(isinstance(o,bool)):\n",
+    "            print(\"%s is boolean\" % o)\n",
+    "    elif(isinstance(o,str)):\n",
+    "            print(\"%s is string\" % o)\n",
+    "    elif(isinstance(o,int)):\n",
+    "            print(\"%d is integer\" % o)\n",
+    "    else:\n",
+    "          print(\"%s is of %s\" %(o,type(o)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 342,
    "metadata": {},
    "outputs": [
